[package]
name = "state-led"
version = "0.1.0"
authors = ["Florian Gilcher <florian.gilcher@asquera.de>"]

# The development profile, used for `cargo build`.
[profile.dev]
panic = "abort"
incremental = false
codegen-units = 1

# The release profile, used for `cargo build --release`.
[profile.release]
panic = "abort"
debug = true
incremental = false
codegen-units = 1

[dependencies]
stellaris-launchpad = { path = "../stellaris-launchpad" }
embedded-hal = "0.1.0"
